5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4428/executions/1679_1880.log
== TEST (2019-05-02 15:22:11) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

mes=int(input())
if (mes<=12 and mes>0):
	if mes == 1:
		print('January')
elif mes == 2:
	print('Febrary')
elif mes == 3:
	print ('March')
elif mes == 4:
	print ('April')
elif mes == 5:
	print ('May')
elif mes == 6:
	print ('June')
elif mes == 7:
	print ('July')
elif mes == 8:
	print ('August')
elif mes == 9:
	print('September')
elif mes == 10:
	print ('October')
elif mes == 11:
	print ('November')
elif mes == 12:
	print('December')
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:23:23) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

mes = int(input("Digite o numero do mes: "))

if(mes<=12 and mes>0):
	if(mes == 1):
		print('January')
elif mes == 2:
	print('Febrary')
elif mes == 3:
	print ('March')
elif mes == 4:
	print ('April')
elif mes == 5:
	print ('May')
elif mes == 6:
	print ('June')
elif mes == 7:
	print ('July')
elif mes == 8:
	print ('August')
elif mes == 9:
	print('September')
elif mes == 10:
	print ('October')
elif mes == 11:
	print ('November')
elif mes == 12:
	print('December')
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:26:43) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

mes = int(input("Digite o numero do mes: "))

if(mes<=12 and mes>0):
	if(mes == 1):
		print("janeiro")
elif mes == 2:
	print("fevereiro")
elif mes == 3:
	print ("marco")
elif mes == 4:
	print ("abril")
elif mes == 5:
	print ("maio")
elif mes == 6:
	print ("junho")
elif mes == 7:
	print ("julho")
elif mes == 8:
	print ("agosto")
elif mes == 9:
	print("setembro")
elif mes == 10:
	print ("outrubro")
elif mes == 11:
	print ("novembro")
elif mes == 12:
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:26:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

mes = int(input("Digite o numero do mes: "))

if(mes<=12 and mes>0):
	if(mes == 1):
		print("janeiro")
elif mes == 2:
	print("fevereiro")
elif mes == 3:
	print ("marco")
elif mes == 4:
	print ("abril")
elif mes == 5:
	print ("maio")
elif mes == 6:
	print ("junho")
elif mes == 7:
	print ("julho")
elif mes == 8:
	print ("agosto")
elif mes == 9:
	print("setembro")
elif mes == 10:
	print ("outrubro")
elif mes == 11:
	print ("novembro")
elif mes == 12:
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:29:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

mes = int(input("Digite o numero do mes: "))

if(mes<=12 and mes>0):
	if(mes == 1):
		print("janeiro")
elif(mes == 2):
	print("fevereiro")
elif(mes == 3):
	print("marco")
elif(mes == 4):
	print("abril")
elif(mes == 5):
	print("maio")
elif(mes == 6):
	print("junho")
elif(mes == 7):
	print("julho")
elif(mes == 8):
	print("agosto")
elif(mes == 9):
	print("setembro")
elif(mes == 10):
	print("outubro")
elif(mes == 11):
	print("novembro")
elif(mes == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:30:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

mes = int(input("Digite o numero do mes: "))

if(mes<=12 and mes>0):
	if(mes == 1):
		print("janeiro")
elif(mes == 2):
	print("fevereiro")
elif(mes == 3):
	print("marco")
elif(mes == 4):
	print("abril")
elif(mes == 5):
	print("maio")
elif(mes == 6):
	print("junho")
elif(mes == 7):
	print("julho")
elif(mes == 8):
	print("agosto")
elif(mes == 9):
	print("setembro")
elif(mes == 10):
	print("outubro")
elif(mes == 11):
	print("novembro")
elif(mes == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:30:53) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

mes = int(input("Digite o numero do mes: "))

if(mes<=12 and mes>0):
	if(mes == 1):
		print("janeiro")
elif(mes == 2):
	print("fevereiro")
elif(mes == 3):
	print("marco")
elif(mes == 4):
	print("abril")
elif(mes == 5):
	print("maio")
elif(mes == 6):
	print("junho")
elif(mes == 7):
	print("julho")
elif(mes == 8):
	print("agosto")
elif(mes == 9):
	print("setembro")
elif(mes == 10):
	print("outubro")
elif(mes == 11):
	print("novembro")
elif(mes == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:32:30) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

mes = int(input("Digite o numero do mes: "))

if(mes<=12 and mes>0):
	if(mes == 1):
		print("janeiro")
elif mes == 2:
	print("fevereiro")
elif mes == 3:
	print ("marco")
elif mes == 4:
	print ("abril")
elif mes == 5:
	print ("maio")
elif mes == 6:
	print ("junho")
elif mes == 7:
	print ("julho")
elif mes == 8:
	print ("agosto")
elif mes == 9:
	print("setembro")
elif mes == 10:
	print ("outubro")
elif mes == 11:
	print ('novembro')
elif mes == 12:
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:37:23) 
-- CODE:

mes = int(input("Digite numero do mes: "))
if (mes<=12 and mes>0):
	if mes == 1:
		print('janeiro')
   elif mes == 2:
        print('fevereiro')
   elif mes == 3:
        print ('marco')
   elif mes == 4:
        print ('abril')
   elif mes == 5:
        print ('maio')
   elif mes == 6:
        print ('junho')
   elif mes == 7:
        print ('julho')
   elif mes == 8:
        print ('agosto')
   elif mes == 9:
        print('setembro')
   elif mes == 10:
        print ('outubro')
   elif mes == 11:
        print ('novembro')
   elif mes == 12:
        print('dezembro')
else: 
	print('numero do mes invalido')
-- ERROR:
File "XXXX", line 6
    elif mes == 2:
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:39:02) 
-- CODE:

mes = int(input("Digite numero do mes: "))
if (mes<=12 and mes>0):
	if mes == 1:
		print('janeiro')
elif mes == 2:
        print('fevereiro')
elif mes == 3:
        print ('marco')
elif mes == 4:
        print ('abril'
elif mes == 5:
        print ('maio')
elif mes == 6:
        print ('junho')
elif mes == 7:
        print ('julho')
elif mes == 8:
        print ('agosto')
elif mes == 9:
        print('setembro')
elif mes == 10:
        print ('outubro')
elif mes == 11:
        print ('novembro')
elif mes == 12:
        print('dezembro')
else: 
	print('numero do mes invalido')
-- ERROR:
File "XXXX", line 12
    elif mes == 5:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:39:30) 
-- CODE:

mes = int(input("Digite numero do mes: "))
if (mes<=12 and mes>0):
	if mes == 1:
		print('janeiro')
elif mes == 2:
        print('fevereiro')
elif mes == 3:
        print ('marco')
elif mes == 4:
        print ('abril')
elif mes == 5:
        print ('maio')
elif mes == 6:
        print ('junho')
elif mes == 7:
        print ('julho')
elif mes == 8:
        print ('agosto')
elif mes == 9:
        print('setembro')
elif mes == 10:
        print ('outubro')
elif mes == 11:
        print ('novembro')
elif mes == 12:
        print('dezembro')
else: 
	print('numero do mes invalido')
-- ERROR:
File "XXXX", line 12
    elif mes == 5:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:39:50) 
-- CODE:

mes = int(input("Digite numero do mes: "))

if (mes<=12 and mes>0):
	if mes == 1:
		print('janeiro')
elif mes == 2:
        print('fevereiro')
elif mes == 3:
        print ('marco')
elif mes == 4:
        print ('abril')
elif mes == 5:
        print ('maio')
elif mes == 6:
        print ('junho')
elif mes == 7:
        print ('julho')
elif mes == 8:
        print ('agosto')
elif mes == 9:
        print('setembro')
elif mes == 10:
        print ('outubro')
elif mes == 11:
        print ('novembro')
elif mes == 12:
        print('dezembro')
else: 
	print('numero do mes invalido')
-- ERROR:
File "XXXX", line 12
    elif mes == 5:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:40:15) 
-- CODE:

mes = int(input("Digite numero do mes: "))

if (mes <=12 and mes > 0):
	if mes == 1:
		print('janeiro')
elif mes == 2:
        print('fevereiro')
elif mes == 3:
        print ('marco')
elif mes == 4:
        print ('abril')
elif mes == 5:
        print ('maio')
elif mes == 6:
        print ('junho')
elif mes == 7:
        print ('julho')
elif mes == 8:
        print ('agosto')
elif mes == 9:
        print('setembro')
elif mes == 10:
        print ('outubro')
elif mes == 11:
        print ('novembro')
elif mes == 12:
        print('dezembro')
else: 
	print('numero do mes invalido')
-- ERROR:
File "XXXX", line 12
    elif mes == 5:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:40:39) 
-- CODE:

mes = int(input("Digite numero do mes: "))

if (mes <=12 and mes > 0):
	if mes == 1:
		print('janeiro')
elif mes == 2:
	print('fevereiro')
elif mes == 3:
        print ('marco')
elif mes == 4:
        print ('abril')
elif mes == 5:
        print ('maio')
elif mes == 6:
        print ('junho')
elif mes == 7:
        print ('julho')
elif mes == 8:
        print ('agosto')
elif mes == 9:
        print('setembro')
elif mes == 10:
        print ('outubro')
elif mes == 11:
        print ('novembro')
elif mes == 12:
        print('dezembro')
else: 
	print('numero do mes invalido')
-- ERROR:
File "XXXX", line 12
    elif mes == 5:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:41:24) 
-- CODE:
mes=int(input())
if (mes<=12 and mes>0):
    if mes == 1:
        print('January')
    if mes == 2:
        print('Febrary')
    if mes == 3:
        print ('March')
    if mes == 4:
        print ('April')
    if mes == 5:
        print ('May')
    if mes == 6:
        print ('June')
    if mes == 7:
        print ('July')
    if mes == 8:
        print ('August')
    if mes == 9:
        print('September')
    if mes == 10:
        print ('October')
    if mes == 11:
        print ('November')
    if mes == 12:
        print('December')
-- OUTPUT:
April
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:55:30) 
-- CODE:
mes=int(input("Digite numero do mes: "))
if (mes<=12 and mes>0):
    if mes == 1:
        print('janeiro')
    if mes == 2:
        print('fevereiro')
    if mes == 3:
        print ('marco')
    if mes == 4:
        print ('abril')
    if mes == 5:
        print ('maio')
    if mes == 6:
        print ('junho')
    if mes == 7:
        print ('julho')
    if mes == 8:
        print ('agosto')
    if mes == 9:
        print('setembro')
    if mes == 10:
        print ('outubro')
    if mes == 11:
        print ('novembro')
    if mes == 12:
        print('dezembro')
-- EXECUTION TIME:
0.138568
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:56:38) 
-- CODE:
mes=int(input("Digite numero do mes: "))
if (mes<=12 and mes>0):
    if mes == 1:
        print('janeiro')
    if mes == 2:
        print('fevereiro')
    if mes == 3:
        print ('marco')
    if mes == 4:
        print ('abril')
    if mes == 5:
        print ('maio')
    if mes == 6:
        print ('junho')
    if mes == 7:
        print ('julho')
    if mes == 8:
        print ('agosto')
    if mes == 9:
        print('setembro')
    if mes == 10:
        print ('outubro')
    if mes == 11:
        print ('novembro')
    if mes == 12:
        print('dezembro')
else:
	('numero de mes invalido')
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:56:53) 
-- CODE:
mes=int(input("Digite numero do mes: "))
if (mes<=12 and mes>0):
    if mes == 1:
        print('janeiro')
    if mes == 2:
        print('fevereiro')
    if mes == 3:
        print ('marco')
    if mes == 4:
        print ('abril')
    if mes == 5:
        print ('maio')
    if mes == 6:
        print ('junho')
    if mes == 7:
        print ('julho')
    if mes == 8:
        print ('agosto')
    if mes == 9:
        print('setembro')
    if mes == 10:
        print ('outubro')
    if mes == 11:
        print ('novembro')
    if mes == 12:
        print('dezembro')
else:
	('numero de mes invalido')
-- EXECUTION TIME:
0.135863
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:57:13) 
-- CODE:
mes=int(input("Digite numero do mes: "))

if (mes<=12 and mes>0):
    if mes == 1:
        print('janeiro')
    if mes == 2:
        print('fevereiro')
    if mes == 3:
        print ('marco')
    if mes == 4:
        print ('abril')
    if mes == 5:
        print ('maio')
    if mes == 6:
        print ('junho')
    if mes == 7:
        print ('julho')
    if mes == 8:
        print ('agosto')
    if mes == 9:
        print('setembro')
    if mes == 10:
        print ('outubro')
    if mes == 11:
        print ('novembro')
    if mes == 12:
        print('dezembro')
else:
	('numero de mes invalido')
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:57:42) 
-- CODE:
mes=int(input("Digite numero do mes: "))

if (mes<=12 and mes>0):
    if mes == 1:
        print('janeiro')
    if mes == 2:
        print('fevereiro')
    if mes == 3:
        print ('marco')
    if mes == 4:
        print ('abril')
    if mes == 5:
        print ('maio')
    if mes == 6:
        print ('junho')
    if mes == 7:
        print ('julho')
    if mes == 8:
        print ('agosto')
    if mes == 9:
        print('setembro')
    if mes == 10:
        print ('outubro')
    if mes == 11:
        print ('novembro')
    if mes == 12:
        print('dezembro')
else:
	('numero de mes invalido')
-- EXECUTION TIME:
0.151688
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:58:46) 
-- CODE:
mes=int(input("Digite numero do mes: "))

if (mes<=12 and mes>0):
    if mes == 1:
        print('janeiro')
elif mes == 2:
        print('fevereiro')
elif mes == 3:
        print ('marco')
elif mes == 4:
        print ('abril')
elif mes == 5:
        print ('maio')
    if mes == 6:
        print ('junho')
    if mes == 7:
        print ('julho')
    if mes == 8:
        print ('agosto')
    if mes == 9:
        print('setembro')
    if mes == 10:
        print ('outubro')
    if mes == 11:
        print ('novembro')
    if mes == 12:
        print('dezembro')
else:
	('numero de mes invalido')
-- ERROR:
File "XXXX", line 14
    if mes == 6:
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
